 * pfcmd_vlan is now able to run arbitrary methods on network devices
 * debug statement with the resolved SSID now available to troubleshoot SSID problems live
 * added getSwitchLocation to pfcmd_vlan which fetches SNMP sysLocation on switch (#1250, Thanks to Maikel!)
 * introduced more aggressive exception-based configuration error handling

Bug Fixes
 * Buttons in graphs.php of type ifoctetshistoryswitch, ifoctetshistoryuser, ifoctetshistorymac (#1110)
 * Web Admin usability fixes (#1071)
 * Small typo error in node.pm log message (#1357)
 * Interpolation issue in pf::web::custom's code which is disabled by default (#1358)
 * Allow more than one SNMPv3 EngineID per user (#1354)
 * OS and violation classes properly displayed in printer-friendly tables in the Web Admin
 * Disabled config ownership tests because of too many false positives (#1345)
 * Passthrough doesn't work with domains without an ending slash (#1368)
 * Returning exit status 0 on command line tools when asked to show help
 * pfcmd's general help is now sent to standard ouput instead of standard error
 * Globally disabled privilege detection in hardware requiring Telnet / SSH. All except Trapeze. (#1370)
 * Thread crash with floating network devices with VoIP through SSH transport (#1369)
 * MAC-Auth / 802.1X translation fixes for the Cisco Catalyst 3550
 * No more obscure error message if no management interface is defined in pf.conf
 * pfcmd exit status now more consistent regarding config
 * No more "Can't call method "tag" on an undefined value" on broken pf.conf configuration (#1352)

Translations
 * Updated Brazilian Portuguese (pt_BR) Admin guide translation (Thanks to Diego de Souza Lopes)

--------------------------------------------------------------------------------
Version 3.1.0 released on 2011-12-23

New Hardware Support
 * Stacked Cisco 3750 in MAC-Auth or 802.1X
 * AeroHIVE, Aruba and Motorola support RADIUS Disconnect (RFC3576) to perform de-authentication

New Features