@@ -31,6 +31,7 @@ Enhancements
  * debug statement with the resolved SSID now available to troubleshoot SSID problems live
  * added getSwitchLocation to pfcmd_vlan which fetches SNMP sysLocation on switch (#1250, Thanks to Maikel!)
  * introduced more aggressive exception-based configuration error handling
+ * RADIUS captive portal authentication can now target several RADIUS servers for fault tolerance
 
 Bug Fixes
  * Buttons in graphs.php of type ifoctetshistoryswitch, ifoctetshistoryuser, ifoctetshistorymac (#1110)
